--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,24 +1,42 @@
-# spring.datasource.x
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:divider;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-# hibernate.X
+
+server.port=7091
+
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create-drop
 hibernate.cache.use_second_level_cache=true
 hibernate.cache.use_query_cache=true
 hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
+
 spring.queries.users-query=select email, password,enabled from user where email=?
 spring.queries.roles-query=select u.email,r.name from user u inner join user_role ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.email=?
-server.port=7091
-logging.level.root=INFO
+
+security.basic.enabled=false
+management.security.enabled=false
+management.health.db.enabled=false
+
 app.roles.role_user=ROLE_USER
 app.roles.role_admin=ADMIN_USER
-management.security.enabled=false
-management.health.db.enabled:false
-security.basic.enabled:false
+
+logging.level.root=INFO
+
 divider.number.upper=1000
+
+# websocket channels
+ws.channel.game=/ws/channel/game/
+ws.channel.game.player=/ws/channel/game/player
+ws.channel.game.player.error=/ws/channel/game/player/error
+
+# websocket messages
+ws.msg.connected=Connected to the game.
+ws.msg.started=You have an opponent, the game has started.
+ws.msg.finished=Game Finished!
+ws.msg.terminated=Game Terminated!
+ws.msg.error=An error occurred:
+
